Bug 419720 - Message status filter broken
Summary: Message status filter broken
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: search (other bugs)
Version First Reported In: 5.13.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-06 13:49 UTC by Christoph Vogtländer
Modified: 2020-04-06 18:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.14.0
Sentry Crash Report:


Attachments
Find Messages dialogue screen shot (69.75 KB, image/png)
2020-04-06 13:49 UTC, Christoph Vogtländer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Vogtländer 2020-04-06 13:49:52 UTC
Created attachment 127324 [details]
Find Messages dialogue screen shot

SUMMARY
The message status filter reads "message status" for all fields. Only the icon gives a hint of what is actually meant. Using such a filter does not work. E.g. using "action item" entry, will show mails even without an action item marker.
Re-opening the "Find Messages" dialogue seems to reset the selection in the drop down to the first entry.


STEPS TO REPRODUCE
1. open "Find Messages"
2. select "Message Status"
3. select type "[action item icon] message status" entry

OBSERVED RESULT
Mails without action item marker are included in the result

EXPECTED RESULT
Only mails with action item marker should be included in the result

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.68.0
Qt Version: 5.14.2


ADDITIONAL INFORMATION
Saved filters seem to work fine. I have an old filter which is searching for "important" mails that is still working.
Comment 1 Laurent Montel 2020-04-06 15:30:16 UTC
I confirm it
Comment 2 Laurent Montel 2020-04-06 18:38:34 UTC
Git commit c67e7be97d5074030f816e2906ed013919cddd19 by Laurent Montel.
Committed on 06/04/2020 at 18:37.
Pushed by mlaurent into branch 'release/20.04'.

Fix Bug 419720 - Message status filter broken

FIXED-IN: 5.14.0

M  +1    -1    src/search/searchrule/searchrulestatus.h

https://commits.kde.org/mailcommon/c67e7be97d5074030f816e2906ed013919cddd19