Fix Bug 419720 - Message status filter broken

FIXED-IN: 5.14.0
BUG: 419720